update, add favicon to html, remove input functionality from script, its done with css, fix body over wide, used overflow

--- a/styles.scss
+++ b/styles.scss
@@ -33,6 +33,7 @@ body {
   color: white;
   font-family: Arial, sans-serif;
   padding: 1em 0;
+  overflow-x: hidden;
 }
 .bannerContainer {
   display: grid;
